--- a/app/src/main/res/layout/story_item.xml
+++ b/app/src/main/res/layout/story_item.xml
@@ -14,46 +14,51 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="306dp"
         android:padding="8dp">
 
         <ImageView
             android:id="@+id/img_item_photo"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:scaleType="centerCrop"
+            android:layout_width="350dp"
+            android:layout_height="195dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:contentDescription="@string/story_image"
+            android:scaleType="centerCrop"
             card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toTopOf="parent"
+            card_view:layout_constraintVertical_bias="0.0"
             tools:src="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/tv_item_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_width="350dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="8dp"
             android:layout_toEndOf="@id/img_item_photo"
-            android:textSize="16sp"
+            android:textSize="24sp"
             android:textStyle="bold"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
-            card_view:layout_constraintTop_toTopOf="@+id/img_item_photo"
+            card_view:layout_constraintEnd_toEndOf="@+id/img_item_photo"
+            card_view:layout_constraintHorizontal_bias="1.0"
+            card_view:layout_constraintStart_toStartOf="@+id/img_item_photo"
+            card_view:layout_constraintTop_toBottomOf="@+id/img_item_photo"
             tools:text="name of the creator" />
 
         <TextView
             android:id="@+id/tv_item_description"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="350dp"
+            android:layout_height="30dp"
             android:layout_marginTop="8dp"
             android:ellipsize="end"
             android:maxLines="5"
-            card_view:layout_constraintBottom_toBottomOf="@+id/img_item_photo"
+            android:textSize="20sp"
             card_view:layout_constraintEnd_toEndOf="@+id/tv_item_name"
+            card_view:layout_constraintHorizontal_bias="0.221"
             card_view:layout_constraintStart_toStartOf="@+id/tv_item_name"
             card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
-            card_view:layout_constraintVertical_bias="0.0"
             tools:text="Description of the story" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
