--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         tools:visibility="visible" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/favorites_button"
+        android:id="@+id/postStoryButton"
         android:layout_width="0dp"
         android:layout_height="150dp"
         android:layout_marginEnd="8dp"
