--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -8,15 +8,17 @@
 
     <ImageView
         android:id="@+id/storyImageView"
-        android:layout_width="350dp"
+        android:layout_width="0dp"
         android:layout_height="250dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:contentDescription="@string/story_image"
         android:transitionName="story"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/ic_place_holder"
-        android:contentDescription="@string/story_image" />
+        tools:srcCompat="@drawable/ic_place_holder" />
 
     <TextView
         android:id="@+id/nameTextView"
@@ -32,17 +34,24 @@
         app:layout_constraintTop_toBottomOf="@+id/storyImageView"
         tools:text="uploader's name" />
 
-    <TextView
-        android:id="@+id/descTextView"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:textSize="14sp"
-        android:transitionName="description"
+        android:scrollbars="vertical"
+        app:layout_constraintTop_toBottomOf="@id/nameTextView"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/storyImageView"
-        app:layout_constraintStart_toStartOf="@+id/storyImageView"
-        app:layout_constraintTop_toBottomOf="@+id/nameTextView"
-        tools:text="@string/description" />
+        app:layout_constraintStart_toStartOf="@id/storyImageView"
+        app:layout_constraintEnd_toEndOf="@id/storyImageView">
+
+        <TextView
+            android:id="@+id/descTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:textSize="14sp"
+            android:transitionName="description"
+            tools:text="@string/description" />
+    </androidx.core.widget.NestedScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
