--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/map_button"
+        android:title="@string/maps"
+        app:showAsAction="never"/>
+    <item
         android:id="@+id/language_button"
         android:title="@string/language_setting"
         app:showAsAction="never"/>
