feat: include self location

--- a/app/src/main/res/layout/activity_post_story.xml
+++ b/app/src/main/res/layout/activity_post_story.xml
@@ -18,20 +18,20 @@
 
     <ImageView
         android:id="@+id/previewImageView"
-        android:layout_width="376dp"
-        android:layout_height="412dp"
+        android:layout_width="375dp"
+        android:layout_height="400dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:contentDescription="@string/image_holder"
         app:layout_constraintBottom_toTopOf="@+id/cameraButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.578"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.098"
-        app:srcCompat="@drawable/ic_place_holder"
-        android:contentDescription="@string/image_holder" />
+        app:srcCompat="@drawable/ic_place_holder" />
 
     <Button
         android:id="@+id/cameraButton"
@@ -70,18 +70,22 @@
         app:layout_constraintStart_toStartOf="@+id/previewImageView"
         app:layout_constraintTop_toTopOf="@+id/cameraButton" />
 
-    <Button
-        android:id="@+id/uploadButton"
-        android:layout_width="0dp"
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/upload"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/galleryButton"
+        app:layout_constraintTop_toBottomOf="@+id/cameraButton" />
 
+    <TextView
+        android:layout_width="124dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/include_my_location"
+        app:layout_constraintBottom_toTopOf="@+id/outlinedTextField"
+        app:layout_constraintStart_toEndOf="@id/checkBox"
+        app:layout_constraintTop_toBottomOf="@id/cameraButton" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/outlinedTextField"
@@ -89,19 +93,29 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:hint="@string/description"
         app:layout_constraintEnd_toEndOf="@id/cameraXButton"
-        app:layout_constraintStart_toStartOf="@id/galleryButton"
-        app:layout_constraintTop_toBottomOf="@id/cameraButton">
+        app:layout_constraintStart_toStartOf="@id/checkBox"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/desc_edit_text"
             android:layout_width="match_parent"
-            android:gravity="start|top"
-            android:layout_height="168dp" />
+            android:layout_height="143dp"
+            android:gravity="start|top" />
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/uploadButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="@string/upload"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/previewImageView"
+        app:layout_constraintStart_toStartOf="@+id/galleryButton"
+        app:layout_constraintTop_toBottomOf="@id/outlinedTextField" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
